--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -6,5 +6,20 @@
     <string name="title_section1">Section 1</string>
     <string name="title_section2">Section 2</string>
     <string name="title_section3">Section 3</string>
+    
+    <string-array name="dicerolls">
+        <item >7</item>
+        <item >6</item>
+        <item >8</item>
+        <item >5</item>
+        <item >9</item>
+        <item >4</item>
+        <item >10</item>
+        <item >3</item>
+        <item >11</item>
+        <item >2</item>
+        <item >12</item>
+    </string-array>
+    
 
 </resources>
