--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -3,23 +3,22 @@
 
     <string name="app_name">CatanStat</string>
     <string name="action_settings">Settings</string>
-    <string name="title_section1">Section 1</string>
-    <string name="title_section2">Section 2</string>
-    <string name="title_section3">Section 3</string>
-    
+
     <string-array name="dicerolls">
-        <item >7</item>
-        <item >6</item>
-        <item >8</item>
-        <item >5</item>
-        <item >9</item>
-        <item >4</item>
-        <item >10</item>
-        <item >3</item>
-        <item >11</item>
-        <item >2</item>
-        <item >12</item>
+        <item>7</item>
+        <item>6</item>
+        <item>8</item>
+        <item>5</item>
+        <item>9</item>
+        <item>4</item>
+        <item>10</item>
+        <item>3</item>
+        <item>11</item>
+        <item>2</item>
+        <item>12</item>
     </string-array>
-    
+
+    <string name="title_activity_menu">MenuActivity</string>
+    <string name="hello_world">Hello world!</string>
 
 </resources>
